css/style.css
/* ... */
.verified-badge-icon {
  position: absolute;
  bottom: 0;
  right: 0;
  width: 28px;
  height: 28px;
  background-color: #da4f0c; /* Orange color like in the video */

  border-radius: 50%;
}
.card-info-text {
  font-size: 18px;
  font-weight: 700;
  line-height: 28px;
  color: rgb(124, 45, 18);
}
.card-in-t {
  font-size: 16px;
  line-height: 24px;
  color: oklch(0.446 0.03 256.802);
}
.card-info-link {
  font-size: 14px;
  line-height: 20px;
  color: oklch(0.551 0.027 264.364);
}

.testimonial-metric span {
  color: oklch(0.551 0.027 264.364);
  font-size: 14px;
  line-height: 20px;
  font-weight: 500;
}

.testimonial-indicators {
  position: absolute;
  bottom: -10px;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
  justify-content: center;
  padding: 0;
  margin: 0;
  z-index: 2;
  list-style: none;
}

.testimonial-indicators [data-bs-target] {
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background: #d1d5dc;
  border: none;
  margin: 0 6px;

  padding: 0;
  cursor: pointer;
  transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
  box-sizing: content-box;
  opacity: 0.6;
}

.testimonial-indicators button.active {
  background: var(--text-orange-bg);

  opacity: 1;
}
.testimonial-indicators [data-bs-target]:hover {
  width: 32px;
  height: 8px;
}
.testimonial-indicators button:hover {
  background: var(--primary-color);
  opacity: 0.8;
}

/* ===== FAQ ===== */
.con-accord {
  margin: 0 auto;
  width: 70%;
  max-width: 900px;
  max-height: 617px;
}
.accordion-icon {
  width: 40px;
  height: 40px;
  background-color: #f7e9e3;
  margin-left: auto;
  transition: all 0.3s ease;
}
.accordion-button:not(.collapsed) .accordion-icon {
  transform: rotate(180deg);
}
.accordion-button:not(.collapsed) {
  background-color: white !important;
  color: rgb(124, 45, 18) !important;
}
.accordion-item {
  border: 1px solid var(--border-color);
  border-radius: 16px !important;
  margin-bottom: 17px;
  overflow: hidden;
  transition: all 0.3s ease;
}
.accordion-item:hover {
  border: 1px solid #f8ccb6;
}

.accordion-button {
  font-weight: 600;
  color: var(--dark-brown);
  padding: 1.25rem 1.5rem;
  background: white;
  box-shadow: none !important;
  transition: all 0.5s ease;
  font-size: 18px;
  line-height: 28px;
}
.accordion-button:hover {
  background-color: #f9fafb !important ;
}
.accordion-button::after {
  display: none !important;
}

.accordion-body {
  max-width: 874px;
  padding: 8px 24px;
  color: oklch(0.446 0.03 256.802);
  line-height: 26px;
  margin-bottom: 24px;
}
.strong-accord {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 4px;
  margin-bottom: 0;
}
.faq-section {
  margin-bottom: 97px;
}
/* ===== Contact Section ===== */
.section-title.f {
  font-family: Inter-bold, sans-serif;
  font-size: 72px;
  font-weight: 900;
  max-width: 500px;
  margin: auto;
  margin-bottom: 25px;
}

.contact-wrapper {
  display: flex;
  --bs-gutter-x: 32px;
  --bs-gutter-y: 32px;
  width: 78%;
  margin: auto;
  border-radius: 24px;
  overflow: hidden;
  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.1);
}
.text-highlight.h {
  background: linear-gradient(135deg, #e9570c 0%, #c4450e 50%, #f68b38 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
  margin-bottom: 25px;
}
.contact-form-side {
  padding: 48px;
  max-width: 768px;
  color: white;
  background-color: white;
}
.section-subtitle.g {
  line-height: 32px;
  color: oklch(0.446 0.03 256.802);
  margin: auto;
  max-width: 850px;
  margin-bottom: 81px;
}
.contact-form-side h4 {
  font-family: Inter-bold, sans-serif;
  line-height: 32px;
  color: rgb(124, 45, 18);
}

.contact-form-side .contact-f-s-p {
  font-size: 18px;
  line-height: 28px;
  color: oklch(0.446 0.03 256.802);
  margin-bottom: 32px;
}

.form-label {
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  color: oklch(0.278 0.033 256.848);
  margin-bottom: 12px;
}

.form-control,
.form-select {
  padding: 16px 20px;
  transition: all 0.3s ease;
  background: #f3f4f6;
}

.form-control:focus,
.form-select:focus {
  border: 2px solid #df551d;
  box-shadow: 0 0 0 3px rgba(194, 65, 12, 0.1);
  background: white;
}

.form-control::placeholder {
  color: #797a7b;
}
.budget-option {
  flex: 1;
  cursor: pointer;
}

.budget-option input {
  display: none;
}

.budget-card {
  border: 2px solid #e5e7eb;
  border-radius: 12px;
  text-align: center;
  transition: all 0.3s ease;
  background: #ffff;
}

.budget-card p {
  color: var(--text-dark);
  margin-bottom: 6px;
}

.budget-card span {
  font-size: 14px;
  line-height: 20px;
  color: oklch(0.551 0.027 264.364);
}

.budget-option input:checked + .budget-card {
  border-color: #ea580c;
  background: var(--primary-bg);
}
.budget-option input:checked + .budget-card p {
  color: var(--text-orange-bg);
}

.budget-option input:checked + .budget-card:hover {
  border-color: #e5e7eb;
}

.form-check-label {
  font-size: 14px;
  line-height: 23px;
  color: oklch(0.446 0.03 256.802) !important;
}
.form-check-label span {
  color: var(--text-orange-bg);
}
.form-check-label span:hover {
  border-bottom: 1.5px solid #df551d;
}
textarea {
  max-height: 156px;
  resize: none;
}
.form-check-input {
  border: 1.5px solid #767676 !important;
  width: 20px !important;
  height: 20px !important;
  margin-right: 12px !important;
}
.form-check-input:focus {
  box-shadow: none;
  border-color: #ea580c !important;
}
.form-check-input:checked {
  border-radius: 0 !important;
  background-color: #ea580c !important;
}
.form-check-input:checked:hover {
  background-color: #b54409 !important;
}

.contact-section .btn-form {
  background: linear-gradient(135deg, #e9570c 0%, #c4430e 50%, #fa903b 100%);
  border: none;
  padding: 20px;
  line-height: 28px;

  color: rgb(255, 255, 255);
  transition: all 0.3s ease;
}

.contact-section .btn-form:hover {
  transform: translateY(-2px);
  box-shadow: 0 8px 20px rgba(194, 65, 12, 0.3);
}
/* ... */

